# TourGuide

./: LocationNode.py  Main.py  README.md  landmark.py  location.py  models.py  openai_service.py  overpass_api.py
TourGuideFrontend/TourGuideFrontend/: ContentView.swift  DraggableMapView.swift  DraggablePin.swift  EnlargedMapView.swift  LocationItem.swift  LocationsView.swift  MapView.swift  TourGuideFrontendApp.swift
TourGuideFrontend/TourGuideFrontend.xcodeproj/: project.pbxproj
TourGuideFrontend/TourGuideFrontend.xcodeproj/project.xcworkspace/xcuserdata/alexsieni.xcuserdatad/: UserInterfaceState.xcuserstate
TourGuideFrontend/TourGuideFrontend.xcodeproj/project.xcworkspace/xcuserdata/owenmcallister.xcuserdatad/: UserInterfaceState.xcuserstate
TourGuideFrontend/TourGuideFrontend.xcodeproj/xcuserdata/alexsieni.xcuserdatad/xcschemes/: xcschememanagement.plist
TourGuideFrontend/TourGuideFrontend/Models/: LocationManager.swift
TourGuideFrontend/TourGuideFrontendTests/: TourGuideFrontendTests.swift
TourGuideFrontend/TourGuideFrontendUITests/: TourGuideFrontendUITests.swift  TourGuideFrontendUITestsLaunchTests.swift
backend/: app.py  pyproject.toml
backend/src/: routes.py
backend/src/api/: bounding_box.py  models.py  openai_client.py  overpass_client.py
