[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Owen McAllister <owencmcallister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.0"
fastapi = "^0.115.5"
openai = "^1.55.0"
uvicorn = "^0.32.1"
geopy = "^2.4.1"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.6"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
